fix align

--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@ body {
   display: flex;
   align-items: center;
   gap: 8px;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .service-icon span {
